charts/deviceedge/cps/nginx-rtmp/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    app: nginx-rtmp
  labels:
    app: nginx-rtmp
  name: nginx-rtmp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-rtmp
  strategy: {}
  template:
    metadata:
      annotations:
        app: nginx-rtmp
      labels:
        app: nginx-rtmp
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
      containers:
      - image: quay.io/yono/rhsc/cps/nginx-rtmp:v1
        imagePullPolicy: IfNotPresent
        name: nginx-rtmp
        volumeMounts:
        - name: conf
          readOnly: true
          mountPath: /home/nginx/etc/
        # - name: output
        #   mountPath: /home/nginx/rec
        # securityContext:
        #   privileged: true
        ports:
        - containerPort: 1935
          protocol: TCP
      restartPolicy: Always
      volumes:
       - name: conf
         configMap:
           name: nginx-config
           items:
            - key: nginx.conf
              path: nginx.conf
      #  - name: output
      #    hostPath:
      #      path: /videosave
      #      type: DirectoryOrCreate
      serviceAccount: hostpath-provisioner
      serviceAccountName: hostpath-provisioner
