charts/deviceedge/cps/nginx-rtmp/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-rtmp
spec:
  type: NodePort
  selector:
    app: nginx-rtmp
  ports:
    - protocol: TCP
      port: 1935
      targetPort: 1935
      nodePort: 31935
