charts/deviceedge/cps/nginx-rtmp/templates/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: rtmp
  labels:
    app: nginx-rtmp
spec:
  to:
    kind: Service
    name: nginx-rtmp
    weight: 100
  port:
    targetPort: 1935
  wildcardPolicy: None
